# jjam

./: .gitignore  AGENTS.md  CODEX_HANDOFF_TODO.md  PLANS.md  README.md  pyproject.toml  workflow.md
.agents/skills/code-implementation/: SKILL.md
.agents/skills/final-report-generation/: SKILL.md
.agents/skills/implementation-planning/: SKILL.md
.agents/skills/paper-analysis/: SKILL.md
.agents/skills/paper-code-review/: SKILL.md
.agents/skills/readme-generation/: SKILL.md
.agents/skills/validation/: SKILL.md
docs/: evaluation.md  system_design.md  workflow.md
examples/: sample_paper.md
paper_impl_harness/: CODEX_TASK.md  README.md  paper-harness.toml  pyproject.toml
paper_impl_harness/harness/: ASSESSMENT_RUBRIC.md  CONVENTIONS.md  VERIFICATION_PROTOCOL.md
paper_impl_harness/harness/templates/: alignment.json  feasibility.json  feasibility_report.md  implementation-manifest.json  implementation_notes.md  implementation_plan.md  paper_code_alignment.md  paper_summary.md  validation.json  validation_report.md
paper_impl_harness/src/paper_harness/: __init__.py  cli.py  core.py
paper_impl_harness/tests/: test_harness.py
runs/sample_run/: implementation_spec.md  paper_code_alignment_matrix.md  revision_plan.md  tooling_plan.md
runs/sample_run_langgraph/: final_report.md  implementation_plan.md  paper_summary.md  prototype_implementation.md
runs/sample_run_uv/: README.generated.md  assumptions.md  review_report.md  validation_result.md
src/paper_agent/: __init__.py  cli.py  code_implementation.py  graph.py  orchestrator.py  paper_analysis.py  planning.py  readme_writer.py  reporting.py  reviewer.py  schemas.py  skill_registry.py  tool_registry.py  utils.py  validation.py
tests/: test_cli.py  test_orchestrator.py  test_paper_analysis.py
