[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-agent-harness"
version = "0.1.0"
description = "Codex-oriented harness that turns AI papers into implementation plans, code tasks, reviews, and reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "paper-agent maintainers" }]
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pypdf>=6.4.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[dependency-groups]
dev = ["pytest>=7.0"]

[project.scripts]
paper-agent = "paper_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["src"]
