[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-paper-harness"
version = "0.3.0"
description = "A local, API-free harness for implementing research papers with Codex."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "paper-agent maintainers" }]
dependencies = [
    "pypdf>=6.4.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[dependency-groups]
dev = ["pytest>=7.0"]

[project.scripts]
paper-harness = "paper_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["src"]
